add visits
